# vscode_c_project_config

./: .vsixmanifest  CHANGELOG.md  README.md  package.json
templates/: c_cpp_properties.json  launch.json  tasks.json
templates/c/: AddTwoNumber.c  CMakeLists.txt  main.c
templates/c_include/: AddTwoNumber.h  zlog.h
templates/c_project/: README.md
templates/c_tests/: CMakeLists.txt
templates/c_vscode/: launch.json  settings.json  tasks.json
templates/cpp/: AddTwoNumber.cpp  CMakeLists.txt  main.cpp
templates/cpp_project/: CMakeLists.txt
templates/cpp_tests/: CMakeLists.txt  Test.cpp
templates/cpp_vscode/: launch.json
templates/lib/: use_zlog.conf
templates/script/: build_and_runmain.bat  run.bat  runmain.bat
templates/tests/: Test.cpp
